Vector/test/first/listFirstHalt.good
listFirstHalt.chpl:5: error: halt reached - Called "listng.first" on an empty listng.
