Vector/test/first/listFirstHalt.chpl
private use ListNG;

var lst: listng(int);

const elem = lst.first();
